2006-02-18  Zoltan Varga  <vargaz@gmail.com>

	* marshal.c (mono_marshal_asany): Fix marshalling of blittable formatted
	classes and add support for [In, Out] attributes.
	(mono_marshal_free_asany): Ditto. Fixes #77524.

2006-02-18  Raja R Harinath  <harinath@gmail.com>

	* class.c (mono_class_from_generic_parameter): Make more robust to
	incomplete MonoGenericContainers from monodis.

Fri Feb 17 16:10:34 CET 2006 Paolo Molaro <lupus@ximian.com>

	* class-internals.h: added some more exception types.
	* class.c, metadata.c: added a few checks to handle missing
	types.

2006-02-17  Raja R Harinath  <rharinath@novell.com>

	Use owner-less generic-params some more.
	* class.c (my_mono_class_from_generic_parameter): Remove.
	(mono_class_from_generic_parameter): Handle null image,
	param->name and param->owner.
	(mono_class_from_mono_type): Update.
	(mono_class_create_from_typespec): Remove 'container' parameter.
	If that parameter is non-null, the result is always inflated by
	'mono_class_get_full' anyway.
	(mono_class_get): Rename from _mono_class_get.  Remove 'container'
	parameter.
	(mono_class_get_full): Update.

	* class.c (inflate_generic_type) [GENERICINST]: If the generic
	instance is not open, don't bother inflating.
	(mono_class_setup_fields): Hoist some loop-invariants.  Don't
	parse metadata for inflated classes.
	(_mono_class_get): Change GenericContext* parameter to
	GenericContainer*.
	(mono_class_create_from_typespec): Likewise.  Simplify, and
	implement trivially.  All the cases are handled in
	mono_class_from_mono_type.  Don't inflate returned class.
	(mono_class_get_full): Delegate GENERICINST optimization to
	inflate_generic_type.
	(mono_ldtoken) [TOKEN_TYPE_SPEC]: Use mono_class_get_full() here too.

2006-02-16  Dick Porter  <dick@ximian.com>

	* socket-io.c (create_object_from_sockaddr): Fix typo.
	(create_sockaddr_from_object): Check array lengths before
	potentially accessing items off the end.